# RayTracer

./: CMakeLists.txt  README.md
colour/: Colour.h
matrix/: Tuple.cpp  Tuple.h  test  test.cpp
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Colour.cpp  Colour.h  Light.cpp  Light.h  Material.h  Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Tuple.cpp  Tuple.h
test/: CMakeLists.txt  canvas_test.cpp  matrix_test.cpp  ray_test.cpp
tuple/: Makefile  Tuple.h  test
